# $id$

# Sympa - SYsteme de Multi-Postage Automatique
#
# Copyright (c) 1997, 1998, 1999 Institut Pasteur & Christophe Wolfhugel
# Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
# 2006, 2007, 2008, 2009, 2010, 2011 Comite Reseau des Universites
# Copyright (c) 2011, 2012, 2013, 2014, 2015 GIP RENATER
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_default_DATA = \
	auth.conf \
	ca-bundle.crt \
	charset.conf \
	crawlers_detection.conf \
	create_list.conf \
	edit_list.conf \
	ldap_alias_entry.tt2 \
	ldap_alias_manager.conf \
	list_aliases.tt2 \
	mhonarc-ressources.tt2 \
	mime.types \
	nrcpt_by_domain.conf \
	sympa.wsdl \
	topics.conf \
	create_list_templates/confidential/comment.tt2 \
	create_list_templates/confidential/config.tt2 \
	create_list_templates/discussion_list/comment.tt2 \
	create_list_templates/discussion_list/config.tt2 \
	create_list_templates/hotline/comment.tt2 \
	create_list_templates/hotline/config.tt2 \
	create_list_templates/html-news-letter/comment.tt2 \
	create_list_templates/html-news-letter/config.tt2 \
	create_list_templates/intranet_list/comment.tt2 \
	create_list_templates/intranet_list/config.tt2 \
	create_list_templates/news-letter/comment.tt2 \
	create_list_templates/news-letter/config.tt2 \
	create_list_templates/private_working_group/comment.tt2 \
	create_list_templates/private_working_group/config.tt2 \
	create_list_templates/public_web_forum/comment.tt2 \
	create_list_templates/public_web_forum/config.tt2 \
	global_task_models/chk_cert_expiration.daily.task \
	global_task_models/crl_update.daily.task \
	global_task_models/eval_bouncers.daily.task \
	global_task_models/expire_bounce.daily.task \
	global_task_models/process_bouncers.weekly.task \
	global_task_models/purge_logs_table.daily.task \
	global_task_models/purge_one_time_ticket_table.daily.task \
	global_task_models/purge_orphan_bounces.monthly.task \
	global_task_models/purge_session_table.daily.task \
	global_task_models/purge_tables.daily.task \
	global_task_models/purge_user_table.monthly.task \
	list_task_models/expire.yearly.task \
	list_task_models/remind.2month.task \
	list_task_models/remind.monthly.task \
	list_task_models/remind.yearly.task \
	list_task_models/sync_include.ttl.task \
	scenari/access_web_archive.closed \
	scenari/access_web_archive.intranet \
	scenari/access_web_archive.listmaster \
	scenari/access_web_archive.owner \
	scenari/access_web_archive.private \
	scenari/access_web_archive.public \
	scenari/add.auth \
	scenari/add.authdkim \
	scenari/add.closed \
	scenari/add.owner \
	scenari/add.owner_notify \
	scenari/add.ownerdkim \
	scenari/automatic_list_creation.listmaster \
	scenari/automatic_list_creation.public \
	scenari/automatic_list_creation.family_owner \
	scenari/create_list.intranet \
	scenari/create_list.listmaster \
	scenari/create_list.public_listmaster \
	scenari/d_edit.editor \
	scenari/d_edit.owner \
	scenari/d_edit.private \
	scenari/d_edit.private-https \
	scenari/d_edit.public \
	scenari/del.auth \
	scenari/del.authdkim \
	scenari/del.closed \
	scenari/del.owner \
	scenari/del.owner_notify \
	scenari/del.ownerdkim \
	scenari/d_read.owner \
	scenari/d_read.private \
	scenari/d_read.private-https \
	scenari/d_read.public \
	scenari/global_remind.listmaster \
	scenari/info.open \
	scenari/info.private \
	scenari/info.conceal \
	scenari/invite.closed \
	scenari/invite.owner \
	scenari/invite.private \
	scenari/invite.public \
	scenari/remind.listmaster \
	scenari/remind.listmasterdkim \
	scenari/remind.owner \
	scenari/remind.ownerdkim \
	scenari/review.closed \
	scenari/review.intranet \
	scenari/review.listmaster \
	scenari/review.owner \
	scenari/review.private \
	scenari/review.public \
	scenari/send.closed \
	scenari/send.confidential \
	scenari/send.editordkim \
	scenari/send.editorkey \
	scenari/send.editorkeyonly \
	scenari/send.editorkeyonlyauth \
	scenari/send.intranet \
	scenari/send.intranetorprivate \
	scenari/send.newsletter \
	scenari/send.newsletterkeyonly \
	scenari/send.private \
	scenari/send.privateandeditorkey \
	scenari/send.privateandnomultipartoreditorkey \
	scenari/send.privatekey \
	scenari/send.privatekeyandeditorkeyonly \
	scenari/send.privateoreditorkey \
	scenari/send.privateorpublickey \
	scenari/send.private_smime \
	scenari/send.public \
	scenari/send.publickey \
	scenari/send.publicnoattachment \
	scenari/send.public_nobcc \
	scenari/send.publicnomultipart \
	scenari/spam_status.x-spam-status \
	scenari/subscribe.auth \
	scenari/subscribe.authdkim \
	scenari/subscribe.auth_notify \
	scenari/subscribe.auth_notifydkim \
	scenari/subscribe.auth_owner \
	scenari/subscribe.auth_ownerdkim \
	scenari/subscribe.closed \
	scenari/subscribe.intranet \
	scenari/subscribe.intranetorowner \
	scenari/subscribe.open \
	scenari/subscribe.open_notify \
	scenari/subscribe.open_quiet \
	scenari/subscribe.owner \
	scenari/subscribe.smime \
	scenari/subscribe.smimeorowner \
	scenari/topics_visibility.conceal \
	scenari/topics_visibility.identified \
	scenari/topics_visibility.noconceal \
	scenari/tracking.owner \
	scenari/tracking.private \
	scenari/unsubscribe.auth \
	scenari/unsubscribe.authdkim \
	scenari/unsubscribe.auth_notify \
	scenari/unsubscribe.auth_notifydkim \
	scenari/unsubscribe.closed \
	scenari/unsubscribe.open \
	scenari/unsubscribe.open_notify \
	scenari/unsubscribe.owner \
	scenari/visibility.conceal \
	scenari/visibility.intranet \
	scenari/visibility.noconceal \
	scenari/visibility.secret \
	web_tt2/active_lists.tt2 \
	web_tt2/add_request.tt2 \
	web_tt2/admin_menu.tt2 \
	web_tt2/admin.tt2 \
	web_tt2/ajax.tt2 \
	web_tt2/arc_manage.tt2 \
	web_tt2/arc_protect.tt2 \
	web_tt2/arcsearch_form.tt2 \
	web_tt2/arcsearch.tt2 \
	web_tt2/arc.tt2 \
	web_tt2/auto_signoff.tt2 \
	web_tt2/automatic_lists_management_request.tt2 \
	web_tt2/automatic_lists_request.tt2 \
	web_tt2/automatic_lists.tt2 \
	web_tt2/blacklist.tt2 \
	web_tt2/button_footer.tt2 \
	web_tt2/button_header.tt2 \
	web_tt2/ca.tt2 \
	web_tt2/change_email.tt2 \
	web_tt2/change_email_request.tt2 \
	web_tt2/choosepasswd.tt2 \
	web_tt2/close_list.tt2 \
	web_tt2/compose_mail.tt2 \
	web_tt2/copy_template.tt2 \
	web_tt2/crash.tt2 \
	web_tt2/create_list_request.tt2 \
	web_tt2/create_list.tt2 \
	web_tt2/css.tt2 \
	web_tt2/css_ie.tt2 \
	web_tt2/d_control.tt2 \
	web_tt2/d_editfile.tt2 \
	web_tt2/d_install_shared.tt2 \
	web_tt2/d_properties.tt2 \
	web_tt2/d_read.tt2 \
	web_tt2/dump_scenario.tt2 \
	web_tt2/dumpvars.tt2 \
	web_tt2/d_upload.tt2 \
	web_tt2/edit_attributes.tt2 \
	web_tt2/edit_config.tt2 \
	web_tt2/editfile.tt2 \
	web_tt2/edit_list_request.tt2 \
	web_tt2/editsubscriber.tt2 \
	web_tt2/edit_template.tt2 \
	web_tt2/error.tt2 \
	web_tt2/exclusion_table.tt2 \
	web_tt2/family_signoff.tt2 \
	web_tt2/family_signoff_request.tt2 \
	web_tt2/footer.tt2 \
	web_tt2/get_closed_lists.tt2 \
	web_tt2/get_inactive_lists.tt2 \
	web_tt2/get_latest_lists.tt2 \
	web_tt2/get_biggest_lists.tt2 \
	web_tt2/get_pending_lists.tt2 \
	web_tt2/help_admin.tt2 \
	web_tt2/help_arc.tt2 \
	web_tt2/help_editfile.tt2 \
	web_tt2/help_editlist.tt2 \
	web_tt2/help_faqadmin.tt2 \
	web_tt2/help_faquser.tt2 \
	web_tt2/help_introduction.tt2 \
	web_tt2/help_listconfig.tt2 \
	web_tt2/help_mail_commands.tt2 \
	web_tt2/help_sendmsg.tt2 \
	web_tt2/help_shared.tt2 \
	web_tt2/help_suspend.tt2 \
	web_tt2/help.tt2 \
	web_tt2/help_user_options.tt2 \
	web_tt2/help_user.tt2 \
	web_tt2/home.tt2 \
	web_tt2/info.tt2 \
	web_tt2/install_pending_list.tt2 \
	web_tt2/javascript.tt2 \
	web_tt2/latest_arc.tt2 \
	web_tt2/latest_d_read.tt2 \
	web_tt2/latest_lists.tt2 \
	web_tt2/lca.tt2 \
	web_tt2/list_button_footer.tt2 \
	web_tt2/list_button_header.tt2 \
	web_tt2/list_menu.tt2 \
	web_tt2/list_panel.tt2 \
	web_tt2/lists.tt2 \
	web_tt2/loginbanner.tt2 \
	web_tt2/login_menu.tt2 \
	web_tt2/loginrequest.tt2 \
	web_tt2/login.tt2 \
	web_tt2/ls_templates.tt2 \
	web_tt2/maintenance.tt2 \
	web_tt2/main.tt2 \
	web_tt2/manage_template.tt2 \
	web_tt2/menu.tt2 \
	web_tt2/menu_search.tt2 \
	web_tt2/modindex.tt2 \
	web_tt2/modform.tt2 \
	web_tt2/nav.tt2 \
	web_tt2/news.tt2 \
	web_tt2/notice.tt2 \
	web_tt2/picture_upload.tt2 \
	web_tt2/pref.tt2 \
	web_tt2/remove_arc.tt2 \
	web_tt2/rename_list_request.tt2 \
	web_tt2/renewpasswd.tt2 \
	web_tt2/requestpasswd.tt2 \
	web_tt2/request_topic.tt2 \
	web_tt2/reviewbouncing.tt2 \
	web_tt2/review_family.tt2 \
	web_tt2/review.tt2 \
	web_tt2/rss_request.tt2 \
	web_tt2/rss.tt2 \
	web_tt2/scenario_test.tt2 \
	web_tt2/search_user.tt2 \
	web_tt2/serveradmin.tt2 \
	web_tt2/setlang.tt2 \
	web_tt2/set_pending_list_request.tt2 \
	web_tt2/show_cert.tt2 \
	web_tt2/show_exclude.tt2 \
	web_tt2/show_sessions.tt2 \
	web_tt2/sigrequest.tt2 \
	web_tt2/skinsedit.tt2 \
	web_tt2/sso_login.tt2 \
	web_tt2/stats.tt2 \
	web_tt2/subindex.tt2 \
	web_tt2/suboptions.tt2 \
	web_tt2/subrequest.tt2 \
	web_tt2/subscriber_table.tt2 \
	web_tt2/suspend_request.tt2 \
	web_tt2/ticket.tt2 \
	web_tt2/title.tt2 \
	web_tt2/tracking.tt2 \
	web_tt2/tt2_error.tt2 \
	web_tt2/viewbounce.tt2 \
	web_tt2/viewlogs.tt2 \
	web_tt2/viewmod.tt2 \
	web_tt2/view_template.tt2 \
	web_tt2/your_lists.tt2 \
	web_tt2/ja/css.tt2 \
	web_tt2/ko/css.tt2 \
	web_tt2/zh-CN/css.tt2 \
	web_tt2/zh-TW/css.tt2 \
	mail_tt2/authorization_reject.tt2 \
	mail_tt2/automatic_bounce_management.tt2 \
	mail_tt2/bye.tt2 \
	mail_tt2/certif_warning.tt2 \
	mail_tt2/command_report.tt2 \
	mail_tt2/digestplain.tt2 \
	mail_tt2/digest.tt2 \
	mail_tt2/dsn.tt2 \
	mail_tt2/d_install_shared.tt2 \
	mail_tt2/d_reject_shared.tt2 \
	mail_tt2/expire_deletion.tt2 \
	mail_tt2/expire_warning1.tt2 \
	mail_tt2/expire_warning2.tt2 \
	mail_tt2/get_archive.tt2 \
	mail_tt2/global_remind.tt2 \
	mail_tt2/helpfile.tt2 \
	mail_tt2/index_archive.tt2 \
	mail_tt2/info_report.tt2 \
	mail_tt2/invite.tt2 \
	mail_tt2/list_created.tt2 \
	mail_tt2/listeditor_notification.tt2 \
	mail_tt2/listmaster_notification.tt2 \
	mail_tt2/listmaster_groupednotifications.tt2 \
	mail_tt2/listowner_notification.tt2 \
	mail_tt2/list_rejected.tt2 \
	mail_tt2/lists.tt2 \
	mail_tt2/list_unknown.tt2 \
	mail_tt2/message_report.tt2 \
	mail_tt2/moderate.tt2 \
	mail_tt2/modindex.tt2 \
	mail_tt2/reject.tt2 \
	mail_tt2/remind.tt2 \
	mail_tt2/removed.tt2 \
	mail_tt2/request_auth.tt2 \
	mail_tt2/review.tt2 \
	mail_tt2/send_auth.tt2 \
	mail_tt2/sendpasswd.tt2 \
	mail_tt2/sendssopasswd.tt2 \
	mail_tt2/stats_report.tt2 \
	mail_tt2/summary.tt2 \
	mail_tt2/urlized_part.tt2 \
	mail_tt2/user_notification.tt2 \
	mail_tt2/welcome.tt2 \
	mail_tt2/which.tt2 \
	mail_tt2/x509-user-cert-missing.tt2 \
	mail_tt2/your_infected_msg.tt2

EXTRA_DIST = $(nobase_default_DATA) \
	     list_aliases.tt2.in

CLEANFILES = list_aliases.tt2

DEFAULT_SCENARIOS = add.owner \
		    d_edit.owner \
		    d_read.private \
		    del.owner \
		    info.open \
		    invite.private \
		    remind.owner \
		    review.owner \
		    send.private \
		    subscribe.open \
		    topics_visibility.noconceal \
		    tracking.owner \
		    unsubscribe.open \
		    visibility.conceal

list_aliases.tt2: Makefile list_aliases.tt2.in
	rm -f $@
	$(AM_V_GEN)$(SED) \
		-e 's|--libexecdir--|$(libexecdir)|' \
		< $(srcdir)/$@.in > $@

install-data-hook:
	cd  $(DESTDIR)$(defaultdir)/scenari; \
	for file in $(DEFAULT_SCENARIOS); do \
		$(LN_S) -f $$file `echo $$file | $(SED) -e 's/\.[^.]*$$/.default/'`; \
	done
	cd $(DESTDIR)$(defaultdir)/web_tt2; \
	rm -f ja_JP/css.tt2 ko_KR/css.tt2 zh_CN/css.tt2 zh_TW/css.tt2; \
	$(LN_S) -f review.tt2 search.tt2; \
	$(LN_S) -f lists.tt2 which.tt2; \
	$(LN_S) -f lists.tt2 search_list.tt2; \
	rm -f authorization_reject.tt2; \
	$(LN_S) -f ../mail_tt2/authorization_reject.tt2
